Implemented rendering 100 messages

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,12 +14,13 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
-
+  <script src="client/env/config.js"></script>
   <!-- Spec files -->
   <script src="spec/chatterboxSpec.js"></script>
 
   <!-- Source files -->
   <script src="client/scripts/app.js"></script>
+  
 
 </head>
 <body>
