--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -18,15 +19,28 @@
         window.location.search = newSearch;
       }
     </script>
-    <!-- your scripts -->
-    <script src="env/config.js"></script>
-    <script src="scripts/app.js"></script>
+
+
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <p>Room: </p>
+      <select>
+        <option>someroom</option>
+        <option>someroom</option>
+        <option>someroom</option>
+      </select>
+      <form>
+        <input type="text" name="submit">
+      </form>
+      <button>chatter</button>
       <!-- Your HTML goes here! -->
     </div>
     <div id="chats"></div>
+        <!-- your scripts -->
+    <script src="env/config.js"></script>
+    <script src="scripts/app.js"></script>
+
   </body>
 </html>
