--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,6 @@
     <title>chatterbox</title>
     <link rel="stylesheet" href="styles/styles.css">
 
-    <!-- dependencies -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -26,18 +23,22 @@
     <div id="main">
       <h1>chatterbox</h1>
       <p>Room: </p>
-      <select>
-        <option>someroom</option>
-        <option>someroom</option>
-        <option>someroom</option>
+      <select class="rooms">
+      <option>ALL rooms</option>
       </select>
       <form>
-        <input type="text" name="submit">
+        <input type="text" name="submit" class="chat-input">
       </form>
-      <button>chatter</button>
+      <button class="chat-submit">chatter</button>
+      <button class="hide-button">hide</button>
       <!-- Your HTML goes here! -->
     </div>
     <div id="chats"></div>
+    <!-- dependencies -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    
         <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
