implemented most of the chatterbox functionalities

--- a/client/index.html
+++ b/client/index.html
@@ -24,13 +24,14 @@
       <h1>chatterbox</h1>
       <p>Room: </p>
       <select class="rooms">
-      <option>ALL rooms</option>
+      <option class="allrooms">ALL rooms</option>
       </select>
       <form>
         <input type="text" name="submit" class="chat-input">
+        <input type="text" name="submit" class="room-input">
       </form>
       <button class="chat-submit">chatter</button>
-      <button class="hide-button">hide</button>
+      <!-- <button class="add-room">add room</button> -->
       <!-- Your HTML goes here! -->
     </div>
     <div id="chats"></div>
